# jurassic-world-alive-raid-simulator

./: CMakeLists.txt  JWAcalc.cpp  README  ability.cpp  ability.h  actions.cpp  actions.h  arguments.cpp  arguments.h  build.bat  build.sh  dex.cpp  dex.h  dino.cpp  dino.h  expression.cpp  expression.h  input.cpp  input.h  jwadata.py  logger.cpp  logger.h  modifiers.cpp  modifiers.h  stats.cpp  stats.h  strprintf.cpp  strprintf.h  utils.cpp  utils.h  wasm.cpp
Examples/: Andrewtops.in  Arctodus.in
Online/: build.sh  data.json  get_paleo.py  index.html  main.css  main.js  worker.js
